--- a/digitalcv.html
+++ b/digitalcv.html
@@ -160,6 +160,6 @@
         </div>
       </div>
     </div>
-    <a href="./index2.html"><strong>HOME</strong></a>
+    <a href="./index.html"><strong>HOME</strong></a>
   </body>
 </html>
