--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
             src="images/project_1.png"
             alt="du an dau tien"
           />
-          <div class="tieu-de"><p class="title-project">CV CÁ NHÂN</p></div>
+          <div class="tieu-de"><p class="title-project">CV CÁ NHÂN: <a href="./digitalcv.html">DIGITAL-CV</a></p></div>
           <div class="funix">
             <span class="nowaday">2021</span
             ><span class="developer"><i class="icon-user"></i>FUNIX</span
@@ -384,7 +384,7 @@
               <td>-HTML,CSS</td>
             </tr>
           </table>
-          <a href="./digitalcv.html">DIGITAL-CV</a>
+          *:
         </div>
       </div>
       <div class="g-col-12 g-col-md-4 g-col-lg-4">
