--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
           <div class="section-conten hidden">
             <div class="ky-nang">
               <div>
-                <p><strong>English-IELTS 7.0</strong></p>
+                <p class=english><strong>English-IELTS 7.0</strong></p>
                 <span class="Thang-diem"></span>
                 <span class="Thang-diem"></span>
                 <span class="Thang-diem" style="background-color: gray"></span>
